-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.5.0-beta1
-
None
-
OS X 10.10
-
e0c5ff03ec3c23691d88318f75b9c993ca594054
Close the log editor while a longer log operation is still running (e.g. with the log for a specific file):
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 org.qt-project.QtCore 0x0000000103ec5eba QMetaObject::cast(QObject*) const + 26 1 libVcsBase_debug.dylib 0x000000010e60969f VcsBase::VcsBaseEditorWidget* qobject_cast<VcsBase::VcsBaseEditorWidget*>(QObject*) + 31 (qobject.h:518) 2 libVcsBase_debug.dylib 0x000000010e638a91 VcsBase::VcsBaseClientImpl::commandFinishedGotoLine(QWidget*) + 33 (vcsbaseclient.cpp:283) 3 libVcsBase_debug.dylib 0x000000010e6426be QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<QWidget*>, void, void (VcsBase::VcsBaseClientImpl::*)(QWidget*)>::call(void (VcsBase::VcsBaseClientImpl::*)(QWidget*), VcsBase::VcsBaseClientImpl*, void**) + 142 (qobjectdefs_impl.h:501) 4 libVcsBase_debug.dylib 0x000000010e642620 void QtPrivate::FunctionPointer<void (VcsBase::VcsBaseClientImpl::*)(QWidget*)>::call<QtPrivate::List<QWidget*>, void>(void (VcsBase::VcsBaseClientImpl::*)(QWidget*), VcsBase::VcsBaseClientImpl*, void**) + 80 (qobjectdefs_impl.h:521) 5 libVcsBase_debug.dylib 0x000000010e642548 QtPrivate::QSlotObject<void (VcsBase::VcsBaseClientImpl::*)(QWidget*), QtPrivate::List<QWidget*>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 168 (qobject_impl.h:144) 6 org.qt-project.QtCore 0x0000000103ef020f QMetaObject::activate(QObject*, int, int, void**) + 1647 7 org.qt-project.QtCore 0x0000000103ef4a0c QSignalMapper::map(QObject*) + 652 8 libVcsBase_debug.dylib 0x000000010e6430d3 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (QSignalMapper::*)()>::call(void (QSignalMapper::*)(), QSignalMapper*, void**) + 131 (qobjectdefs_impl.h:501) 9 libVcsBase_debug.dylib 0x000000010e643040 void QtPrivate::FunctionPointer<void (QSignalMapper::*)()>::call<QtPrivate::List<>, void>(void (QSignalMapper::*)(), QSignalMapper*, void**) + 80 (qobjectdefs_impl.h:521) 10 libVcsBase_debug.dylib 0x000000010e642f68 QtPrivate::QSlotObject<void (QSignalMapper::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 168 (qobject_impl.h:144) 11 org.qt-project.QtCore 0x0000000103ee9433 QObject::event(QEvent*) + 755 12 org.qt-project.QtWidgets 0x0000000103031f73 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 307 13 org.qt-project.QtWidgets 0x0000000103035266 QApplication::notify(QObject*, QEvent*) + 8022 14 org.qt-project.QtCore 0x0000000103ec0c5c QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) + 956 15 libqcocoa.dylib 0x0000000105f0976e QCocoaEventDispatcherPrivate::processPostedEvents() + 190 16 libqcocoa.dylib 0x0000000105f09fe1 QCocoaEventDispatcherPrivate::postedEventsSourceCallback(void*) + 33 17 com.apple.CoreFoundation 0x00007fff919fda01 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17 18 com.apple.CoreFoundation 0x00007fff919efb8d __CFRunLoopDoSources0 + 269 19 com.apple.CoreFoundation 0x00007fff919ef1bf __CFRunLoopRun + 927 20 com.apple.CoreFoundation 0x00007fff919eebd8 CFRunLoopRunSpecific + 296 21 com.apple.HIToolbox 0x00007fff904d856f RunCurrentEventLoopInMode + 235 22 com.apple.HIToolbox 0x00007fff904d81ee ReceiveNextEventCommon + 179 23 com.apple.HIToolbox 0x00007fff904d812b _BlockUntilNextEventMatchingListInModeWithFilter + 71 24 com.apple.AppKit 0x00007fff8816e9bb _DPSNextEvent + 978 25 com.apple.AppKit 0x00007fff8816df68 -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 346 26 com.apple.AppKit 0x00007fff88163bf3 -[NSApplication run] + 594 27 libqcocoa.dylib 0x0000000105f08f3a QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 2266 28 org.qt-project.QtCore 0x0000000103ebd6fc QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 412 29 org.qt-project.QtCore 0x0000000103ec053a QCoreApplication::exec() + 346 30 org.qt-project.qtcreator 0x0000000102ad430b main + 13291 (main.cpp:521) 31 org.qt-project.qtcreator 0x0000000102acd274 start + 52